# lightning-transformers

./: pipline.md  preprocessing.ipynb  pyproject.toml  tests.py
conf/backbone/nlp/: reaction.yaml
conf/dataset/nlp/: default.yaml
conf/dataset/nlp/reaction/: default.yaml  smiles.yaml
conf/task/nlp/: reaction.yaml
conf/tokenizer/: customtokenizer.yaml
framework/: cli.yaml  conf.yaml  core.yaml  task.yaml  utilities.yaml
lightning_transformers/cli/: train.py
lightning_transformers/core/: data.py
lightning_transformers/core/nlp/: data.py
lightning_transformers/task/nlp/reaction/: __init__.py  config.py  data.py  model.py
lightning_transformers/task/nlp/reaction/datasets/: __init__.py  smi.py
lightning_transformers/task/nlp/translation/datasets/: smiles.py
tests/cli/: test_train.py
