[tool.poetry]
name = "pltrans"
version = "0.1.0"
description = ""
authors = ["zhaisilong <zhaisilong@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
datasets = "^2.0.0"
pytorch-lightning = "^1.6.0"
numpy = "^1.22.3"
tqdm = "^4.64.0"
torchmetrics = {extras = ["text"], version = "^0.7.3"}
transformers = "^4.18.0"
hydra-core = "^1.1.1"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
